fixed book page spacing

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -269,6 +269,8 @@ nav {
 .packages{
     display: flex;
     justify-content: space-around;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .package-image{
     width: 100px;
